<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <View
        android:id="@+id/container_danw"
        style="@style/container_down"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/setesquerda"
        android:layout_width="38dp"
        android:layout_height="66dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        app:srcCompat="@drawable/ic_esquerda_direcional" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="660dp"
        android:layout_marginTop="38dp"
        app:srcCompat="@drawable/flight" />

    <View
        android:id="@+id/conteudo"
        style="@style/container_conteudo"
        android:layout_height="300dp"
        android:layout_marginTop="435dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Vejoassentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="38dp"
        android:text="@string/VejoAssentos"
        android:textColor="@color/branco"
        android:textSize="18dp"

        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/Avianca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="460dp"
        android:text="@string/AviancaAirlines"
        android:textColor="@color/font_text_label"

        android:textSize="24dp" />

    <TextView
        android:id="@+id/classe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Avianca"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="12dp"
        android:text="@string/classe"
        android:textColor="@color/font_text_sublabel"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/Poltrona_classe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Avianca"
        android:layout_alignLeft="@id/classe"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="12dp"
        android:text="@string/Poltronas"
        android:textColor="@color/font_text_sublabel"
        android:textSize="17dp" />



    <TextView
        android:id="@+id/subclasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/classe"
        android:layout_marginLeft="18dp"
        android:text="@string/model"
        android:textColor="@color/font_text_label"
        android:textSize="22dp" />


    <TextView
        android:id="@+id/servicos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/classe"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="45dp"
        android:text="@string/Servico"
        android:textColor="@color/font_text_sublabel"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/sub_servicos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/servicos"
        android:layout_marginLeft="18dp"
        android:text="@string/Servico"
        android:textColor="@color/preto"

        android:textSize="22dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Visualizar"
        style="@style/container_button"
        android:layout_below="@id/sub_servicos"
        android:clickable="true"
        android:text="@string/Vizualizar"


        />

    <Spinner
        android:id="@+id/spinner_poltronas"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Poltrona_classe"
        android:layout_marginLeft="292dp" />


</RelativeLayout>