<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <View
        android:id="@+id/containertop"
        style="@style/container_top"
        android:layout_height="236dp"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/aviao"
        android:layout_width="67dp"
        android:layout_height="59dp"
        android:layout_alignLeft="@id/containertop"
        android:layout_marginTop="68dp"
        app:srcCompat="@drawable/ic_duoaviao" />

    <ImageView
        android:id="@+id/circulos"
        android:layout_width="116dp"
        android:layout_height="109dp"
        android:layout_alignRight="@id/containertop"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/textoTela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="122dp"
        android:text="@string/textMenu1"
        android:textColor="@color/branco"
        android:textSize="28dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/labelpesquisa"
        style="@style/container_labels"
        android:layout_below="@id/textoTela"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_pesquisa"
        android:hint="@string/searchr" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/textOrigem"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@id/labelpesquisa"
        android:layout_marginTop="32dp"
        android:hint="@string/Origem"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundMode="outline"
        android:background="@color/cinzalayout"
        app:startIconDrawable="@drawable/ic_aviaorigem"


        app:endIconMode="clear_text"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/textDestino"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@id/textOrigem"
        android:layout_marginTop="6dp"
        android:hint="@string/Destino"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundMode="outline"
        android:background="@color/cinzalayout"
        app:startIconDrawable="@drawable/ic_aviaodestino"
        app:endIconMode="clear_text"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pesquisarbutton"
        style="@style/container_button"
        android:layout_below="@id/textDestino"
        android:clickable="true"
        android:text="@string/search"


        />

    <EditText
        android:id="@+id/Outraspesquisas"
        style="@style/container_text"
        android:layout_below="@id/pesquisarbutton"
        android:layout_marginTop="14dp"
        android:clickable="false"
        android:hint="@string/othersSearchs"
        android:textColor="@color/black"
        android:textSize="19dp" />

    <ViewFlipper
        android:id="@+id/Flip"
        android:layout_width="580dp"
        android:layout_height="180dp"
        android:layout_below="@id/pesquisarbutton"
        android:layout_marginTop="71dp" />




</RelativeLayout>